...
    required init?(coder: NSCoder) {
        super.init(coder: coder)
        self.commonInit()
    }
    
    private func commonInit() {
        self.informationButton.accessibilityIdentifier = "CreditsInformationButton"
        self.makePredictionButton.accessibilityIdentifier = "MakePredictionButton"
        self.matchEntryView = MatchEntryView()
        self.raceSelector = RaceSelectionView()
        self.setupSubviews() // always last.
    }
    
...
